# AI_POWERED_CHATBOT

./: LICENSE  README.md  main_app.py  pyproject.toml  requirements.txt
ai_powered/: pyvenv.cfg
ai_powered/Scripts/: activate  activate.bat  activate.fish  jsondiff  jsonpatch  jsonpointer
cli/: commands.py
core/docstring_engine/: generator.py  llm_generation.py
core/parser/: python_parser.py
core/reporter/: coverage_reporter.py
core/validator/: validator.py
dashboard_ui/: dashboard.py
examples/: sample_a.py  sample_b.py
experiments/: llm_groq.py  llm_local.py
storage/: review_logs.json
storage/reports/: review_report.json
tests/: test_coverage_reporter.py  test_dashboard.py  test_edge_cases.py  test_generator.py  test_integration.py  test_llm_integration.py  test_milestone4.py  test_parser.py  test_validator.py
